--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="./styles.css">
     <title>ToDo App</title>
     <h1>ToDo App</h1>
 </head>
 
 <body>
-    <div>
+    <div id="inputTodo">
         <input type="text" id="todoItem" placeholder="New Todo">
         <button id="addButton">Add</button>
     </div>
     <div>
         <ul id="todoList">
+
         </ul>
     </div>
 </body>
