--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <link rel="stylesheet" href="./styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo App</title>
-    <h1>ToDo App</h1>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
+    <h1>ToDo App</h1>
     <div id="inputTodo">
-        <input type="text" id="todoItem" placeholder="New Todo">
+        <input type="text" id="todoInput" placeholder="New Todo">
         <button id="addButton">Add</button>
     </div>
     <div>
         <ul id="todoList">
         </ul>
     </div>
-</body>
 
+</body>
 <script src="./index.js"></script>
 
 </html>
