Completed the Todo App

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 
 <body>
-    <h1>ToDo App</h1>
-    <div id="inputTodo">
-        <input type="text" id="todoInput" placeholder="New Todo">
-        <button id="addButton">Add</button>
-    </div>
-    <div>
-        <ul id="todoList">
-        </ul>
+    <div class="container">
+        <h1>ToDo App</h1>
+        <div id="todoForm">
+            <input type="text" id="todoInput" placeholder="New Todo" autocomplete="off">
+            <button id="addButton">Add</button>
+        </div>
+        <div>
+            <ul id="todoList">
+            </ul>
+        </div>
     </div>
 
 </body>
