--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <h1>ToDo App</h1>
-        <div id="todoForm">
-            <input type="text" id="todoInput" placeholder="New Todo" autocomplete="off">
-            <button id="addButton">Add</button>
+        <div id="todo-form">
+            <input type="text" id="todo-input" placeholder="New Todo" autocomplete="off">
+            <button id="add-button">Add</button>
         </div>
         <div>
-            <ul id="todoList">
+            <ul id="todo-list">
             </ul>
         </div>
     </div>
